--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@ git sucks
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>The boys are back</title>
 </head>
 <body>
+	<h1>Hello there sunshine</h1>
+	
 
 </body>
 </html>
