--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@ git sucks
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The boys are back</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>VideoWebsite</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="JChallengestylesheet">	
+	<link href="https://fonts.googleapis.com/css?family=Slabo+17px" rel="stylesheet">
 </head>
 <body>
-	<h1>Hello there sunshine</h1>
-
-	<h1>heey teammates</h1>
-
-	<h1> Hi there Raf </h1>
+	
 	
 
 </body>
