--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-git sucks
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,13 +5,46 @@ git sucks
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>VideoWebsite</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"> <!--loads Normalize.css-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="JChallengestylesheet">	
-	<link href="https://fonts.googleapis.com/css?family=Slabo+17px" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">	
 </head>
 <body>
-	
-	
-
+	<div class="container">
+		<div class="row">
+			<div class="text-center slide-in-menu">	
+				<div class="text-center">
+					<img src="Pizza.jpg" alt="Pizza" class="social">
+				</div>
+				<div>
+					<h4><strong><a href="">Your Name</a></strong></h4>
+				</div>
+				<div class="pull-left">
+					<h5 class="white pull-left"><a href="#">Home</a></h5>
+					<h5 class="white"><a href="#">Favorites</a></h5>
+					<div class="dropdown" id="dropper">
+						<a class="dropdown-toggle" data-toggle="dropdown">
+							Genres 
+							<span class="caret"></span>
+							<ul class="dropdown-menu transparent white">
+							    <li><a href="#">Comedy</a></li>
+							    <li><a href="#">Action</a></li>
+							    <li><a href="#">Horror</a></li>
+				  			</ul>
+			  			</a>
+			  		</div>
+			  		<h5 class="white"><a href="#">About Us</a></h5>
+		  		</div>
+			</div> <!--Slide-in Menu-->
+			<span class="glyphicon glyphicon-menu-hamburger" id="menu-trigger">
+			</span><!--Test Trigger for Slide-in-->
+		</div><!--row-->
+		<div class="row">
+			<div class="col-md-12 red">
+			</div>
+		</div><!--row-->
+	</div><!--container-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 </body>
 </html>
