the endless scroll

--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>VideoWebsite</title>
+		<title>VideoWebsite</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="JChallengestylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 		<link href="https://fonts.googleapis.com/css?family=Slabo+17px" rel="stylesheet">
-		<script type="text/javascript" src="js/javascript.js"></script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -28,98 +25,94 @@
   			 </div>
 		</div>
 		<div class="container-fluid endless_body">
-			<div class="row">
-  				<div class="col-xs-2 tooltip">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
-    				<a href="#" title="Textbox" class="tooltip">This is a shitty movie!</a>
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
+			<div id="view_1">
+				<div class="row">
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  			</div>
+	  			<div class="row">
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  			</div>
+	  			<div class="row">
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  			</div>
+	  			<div class="row">
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	  				</div>
+	  			</div>
+	  			<div class="row">
+	  				<div id="trigger_1" class="col-xs-4 col-xs-offset-4 trigger">	<a href="#view_2">Want More?</a>
+	  				</div>
+	  			</div>
+	  		</div>
+	  		<div id="view_2" class="hidden">
+  			<div class="row">
   				<div class="col-xs-2">
     				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
   				</div>
@@ -138,83 +131,164 @@
   				<div class="col-xs-2">
     				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
   				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<div class="col-xs-2">
-    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-  				</div>
-  				<p id="loading"><img src="images/loading.gif" alt="Loading…" /></p>
-  				<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  				crossorigin="anonymous"></script>
-
   			</div>
-		</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+	  			<div id="trigger_2" class="col-xs-4 col-xs-offset-4 trigger">
+	  				<a href="#view_3">You still have not found anything to watch?!</a>
+	  			</div>
+	  		</div>
+	  		</div>
+	  		<div id="view_3" class="hidden">
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  				<div class="col-xs-2">
+    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+  				</div>
+  			</div>
+  			<div class="row center-block">
+  				<div class="col-xs-4 col-xs-offset-4 trigger">
+	  				That's it. If you have seen everything already I recommend going outside!
+	  			</div>
+	  		</div>
+	  		</div>
+  		</div>
+  		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  		crossorigin="anonymous"></script>
+  		<script type="text/javascript" src="js/javascript.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	</body>
 </html>
