--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 		</div>
 		<div class="container-fluid endless_body">
 			<div id="view_1">
-				<div class="row">
+        <div id="photo-container"><img src="http:///media.giphy.com/media/SgaZMaG4VPewg/giphy.gif"></div>
+				<!-- <div class="row">
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
+	    				<a href="#" class="thumbnail"><img class= "" src="..." alt="..."></a>
 	  				</div>
 	  				<div class="col-xs-2">
 	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
@@ -282,7 +283,7 @@
   			<div class="row center-block">
   				<div class="col-xs-4 col-xs-offset-4 trigger">
 	  				That's it. If you have seen everything already I recommend going outside!
-	  			</div>
+	  			</div> -->
 	  		</div>
 	  		</div>
   		</div>
