--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>VideoWebsite</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="JChallengestylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-		<link href="https://fonts.googleapis.com/css?family=Slabo+17px" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -26,7 +24,7 @@
 		</div>
 		<div class="container-fluid endless_body">
 			<div id="view_1">
-        <div id="photo-container"><img src="http:///media.giphy.com/media/SgaZMaG4VPewg/giphy.gif"></div>
+        <div id="photo-container"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gri0DDxsERr6B2sOR1fGLxLpSLx.jpg"></div>
 				<!-- <div class="row">
 	  				<div class="col-xs-2">
 	    				<a href="#" class="thumbnail"><img class= "" src="..." alt="..."></a>
