Minor layout adjustments

--- a/index.html
+++ b/index.html
@@ -22,87 +22,85 @@
   			 	<p><a class="btn btn-primary btn-lg" href="#" role="button">Check out Latest Movie Reviews here!</a></p>
   			 </div>
 		</div>
-		<div class="container-fluid endless_body">
-			<div id="view_1">
-        <div id="photo-container"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gri0DDxsERr6B2sOR1fGLxLpSLx.jpg"></div>
-				<!-- <div class="row">
+		<div class="container-fluid endless_body">			     
+				<div class="row">
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img class= "" src="..." alt="..."></a>
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gri0DDxsERr6B2sOR1fGLxLpSLx.jpg" alt="Fantastic Beasts"></a>
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a>
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/e1mjopzAS2KNsvpbpahQ1a6SkSn.jpg" alt="Suicide Squad"></a>
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/nHXiMnWUAUba2LZ0dFkNDVdvJ1o.jpg" alt="Underworld Blood Wars"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/4Iu5f2nv7huqvuYkmZvSPOtbFjs.jpg" alt="Arrival"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/6w1VjTPTjTaA5oNvsAg0y4H6bou.jpg" alt="Insurgent"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/xfWac8MTYDxujaxgPVcRD9yZaul.jpg" alt="Doctor Strange"></a> 
 	  				</div>
 	  			</div>
 	  			<div class="row">
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/4qnJ1hsMADxzwnOmnwjZTNp0rKT.jpg" alt="Ghostbusters"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/5N20rQURev5CNDcMjHVUZhpoCNC.jpg" alt="Captain America: Civil War"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/lFSSLTlFozwpaGlO31OoUeirBgQ.jpg" alt="Jason Bourne"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg" alt="Interstellar"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/xMvzfhXZdfeLBZZUIQRB4vw1EtA.jpg" alt="The BFG"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  			</div>
-	  			<div class="row">
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
-	  				</div>
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/z4x0Bp48ar3Mda8KiPD1vwSY3D8.jpg" alt="Moana"></a> 
 	  				</div>
 	  			</div>
 	  			<div class="row">
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/kqjL17yufvn9OVLyXYpvtyrFfak.jpg" alt="Mad Max: Fury Road"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gj282Pniaa78ZJfbaixyLXnXEDI.jpg" alt="The Hunger Games: Mockingjay Part 1"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/WLQN5aiQG8wc9SeKwixW7pAR8K.jpg" alt="The Secret Life of Pets"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/mLrQMqyZgLeP8FrT5LCobKAiqmK.jpg" alt="Star Trek Beyond"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/oFOG2yIRcluKfTtYbzz71Vj9bgz.jpg" alt="Inferno"></a> 
 	  				</div>
 	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="..." alt="..."></a> 
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/sRxazAAodkAWVPJighRAsls2zCo.jpg" alt="Ben Hur"></a> 
+	  				</div>
+	  			</div>
+	  			<div class="row">
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/6FxOPJ9Ysilpq0IgkrMJ7PubFhq.jpg" alt="The Legend of Tarzan"></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/9KQX22BeFzuNM66pBA6JbiaJ7Mi.jpg" alt="Independence Day"></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/b9uYMMbm87IBFOq59pppvkkkgNg.jpg" alt="John Wick"></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/cGOPbv9wA5gEejkUN892JrveARt.jpg" alt="Batman v Superman: Dawn of Justice"></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/inVq3FRqcYIRl2la8iZikYYxFNR.jpg" alt="Deadpool"></a> 
+	  				</div>
+	  				<div class="col-xs-2">
+	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/jjBgi2r5cRt36xF6iNUEhzscEcb.jpg" alt="Jurassic World"></a> 
 	  				</div>
 	  			</div>
 	  			<div class="row">
@@ -281,7 +279,7 @@
   			<div class="row center-block">
   				<div class="col-xs-4 col-xs-offset-4 trigger">
 	  				That's it. If you have seen everything already I recommend going outside!
-	  			</div> -->
+	  			</div>
 	  		</div>
 	  		</div>
   		</div>
