--- a/index.html
+++ b/index.html
@@ -17,15 +17,55 @@
 			</div>		
 		</div>
 		<div class="container-fluid">
-			<div class="jumbotron">
-				<h1>Hello, world!</h1>
-  			 	<p><a class="btn btn-primary btn-lg" href="#" role="button">Check out Latest Movie Reviews here!</a></p>
-  			 </div>
+			<div class="jumbotron"> 
+				<!-- WIP, stil trying to figure out the coursel thing
+				 <div class="carousel slide" id="myCarousel"  data-ride="carousel">
+					<ol class="carousel-indicators">
+    					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    					<li data-target="#myCarousel" data-slide-to="1"></li>
+    					<li data-target="#myCarousel" data-slide-to="2"></li>
+   						<li data-target="#myCarousel" data-slide-to="3"></li>
+  				</ol>
+  			<div class="carousel-inner" role="listbox">
+    			<div class="item active">
+      				<img class= "sliding_banner" src="http://o.aolcdn.com/hss/storage/midas/88320a9147e2abc2bb49b022d2a4b85c/204527652/grandtourbanner.jpg" alt="The Grand Tour">
+      				<div class="carousel-caption">
+        			<h3>The Grand Tour</h3>
+        			<p><a class="btn btn-primary btn-lg" href="#" role="button">Watch the all new Grand Tour featuring the cast of the famous BBC Car Show Top Gear</a></p>
+       				</div>
+    			</div>
+    		<div class="item">
+      			<img src="" alt="">
+      			<div class="carousel-caption">
+        			<h3></h3>
+        			<p></p>
+      			</div>
+    		</div>
+    		<div class="item">
+      			<img src="" alt="">
+      			<div class="carousel-caption">
+        			<h3></h3>
+        			<p></p>
+      			</div>
+    		</div> 
+ 				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    			<span class="sr-only">Previous</span>
+  				</a>
+  				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    			<span class="sr-only">Next</span>
+  				</a>	
+			</div> -->
+			 	
+  			</div>
 		</div>
-		<div class="container-fluid endless_body">			     
+		<div class="container-fluid endless_body">
+			<div id="view_1">			     
 				<div class="row">
-	  				<div class="col-xs-2">
-	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gri0DDxsERr6B2sOR1fGLxLpSLx.jpg" alt="Fantastic Beasts"></a>
+	  				<div class="col-xs-2 hoverinfo">
+	    				<a href="#" class="thumbnail hover"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/gri0DDxsERr6B2sOR1fGLxLpSLx.jpg" alt="Fantastic Beasts"></a>
+	    				<p class="hidden"> This is a movie </p>
 	  				</div>
 	  				<div class="col-xs-2">
 	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/e1mjopzAS2KNsvpbpahQ1a6SkSn.jpg" alt="Suicide Squad"></a>
@@ -103,6 +143,7 @@
 	    				<a href="#" class="thumbnail"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/jjBgi2r5cRt36xF6iNUEhzscEcb.jpg" alt="Jurassic World"></a> 
 	  				</div>
 	  			</div>
+	  		</div>
 	  			<div class="row">
 	  				<div id="trigger_1" class="col-xs-4 col-xs-offset-4 trigger">	<a href="#view_2">Want More?</a>
 	  				</div>
