--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			<div class="row header"> 
-				<div class="col-md-12">
-					
-				</div>				
-			</div>		
+      <nav id="navbar" class="navbar navbar-default navbar-fixed-top text-center">
+        <div class="container-fluid">
+          <div class="col-md-1"></div>
+          <div class="col-md-2">
+            <h2>Our MDB</h2>
+          </div>
+          <div class="col-md-2">
+             <h2><a href="#MyVision">Movies</a></h2>
+          </div>
+          <div class="col-md-2">
+             <h2><a href="#MyStory">Series</a></h2>
+          </div>
+          <div class="col-md-2">
+             <h2><a href="#Experience&Skills">Other</a></h2>
+          </div>
+          <div class="col-md-2">
+             <h2><a href="#Projects">Our Movie Projects</a></h2>
+          </div>
+        </div>
+      </nav><br>	
 		</div>
 		<div class="container-fluid">
 			<div class="jumbotron"> 
