--- a/index.html
+++ b/index.html
@@ -6,18 +6,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>VideoWebsite</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="JChallengestylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 		<link href="https://fonts.googleapis.com/css?family=Slabo+17px" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container-fluid">
-			<div class="row header"> 
-				<div class="col-md-12">
-					
-				</div>				
-			</div>		
-		</div>
+  <!-- Begin navbar  -->
+  <nav class="navbar navbar-inverse coloured">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">WebSiteName</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a class="font-color" href="#">Home</a></li>
+        <li class="font-color"><a href="#view_1">Movies</a></li>
+        <li class="font-color"><a href="#">Our team</a></li>
+        <li class="font-color"><a href="#">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href=""><i class="fa fa-twitter size"></i></a></li>
+        <li><a href=""><i class="fa fa-facebook size"></i></a></li>
+        <li><a href=""><i class="fa fa-instagram size"></i></a></li>
+      </ul>
+    </div>
+  </nav>
+    <!-- End navbar -->
 		<div class="container-fluid">
 			<div class="jumbotron">
 				<h1>Hello, world!</h1>
