--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>VideoWebsite</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="JChallengestylesheet">
-=======
->>>>>>> d43aa37ed438a690eaca8915579aeda5f2d494a8
 		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 	</head>
 	<body>
-<<<<<<< HEAD
+
   <!-- Begin navbar  -->
-  <!-- <nav class="navbar navbar-inverse coloured">
+  <nav class="navbar navbar-inverse coloured">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">WebSiteName</a>
@@ -37,7 +34,6 @@
     </div>
   </nav> -->
     <!-- End navbar -->
-=======
 		<div class="container-fluid">
       <nav id="navbar" class="navbar navbar-default navbar-fixed-top text-center">
         <div class="container-fluid">
@@ -60,7 +56,6 @@
         </div>
       </nav><br>	
 		</div>
->>>>>>> d43aa37ed438a690eaca8915579aeda5f2d494a8
 		<div class="container-fluid">
       <div id="movieCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
