--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 		<div class="container-fluid">
       <nav id="navbar" class="navbar navbar-default navbar-fixed-top text-center">
         <div class="container-fluid">
-          <div class="col-md-1"></div>
+          <div class="col-md-1">
+            <span class="glyphicon glyphicon-menu-hamburger" id="#slider_trigger"></span>
+          </div>
           <div class="col-md-2">
             <h2>Our MDB</h2>
           </div>
