--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 
-  <!-- Begin navbar  -->
+  <div>
   <nav class="navbar navbar-inverse coloured">
     <div class="container">
       <div class="navbar-header">
@@ -33,7 +33,8 @@
       </ul>
     </div>
   </nav> -->
-    <!-- End navbar -->
+  </div>
+
 		<div class="container-fluid">
       <nav id="navbar" class="navbar navbar-default navbar-fixed-top text-center">
         <div class="container-fluid">
