--- a/index.html
+++ b/index.html
@@ -12,53 +12,59 @@
 	</head>
 	<body>
 
-  <div>
-  <nav class="navbar navbar-inverse coloured">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">WebSiteName</a>
+  <!-- <div>
+    <nav class="navbar navbar-inverse coloured">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a class="font-color" href="#">Home</a></li>
+          <li class="font-color"><a href="#view_1">Movies</a></li>
+          <li class="font-color"><a href="#">Our team</a></li>
+          <li class="font-color"><a href="#">Contact</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a href=""><i class="fa fa-twitter size"></i></a></li>
+          <li><a href=""><i class="fa fa-facebook size"></i></a></li>
+          <li><a href=""><i class="fa fa-instagram size"></i></a></li>
+        </ul>
       </div>
-      <ul class="nav navbar-nav">
-        <li><a class="font-color" href="#">Home</a></li>
-        <li class="font-color"><a href="#view_1">Movies</a></li>
-        <li class="font-color"><a href="#">Our team</a></li>
-        <li class="font-color"><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li><a href=""><i class="fa fa-twitter size"></i></a></li>
-        <li><a href=""><i class="fa fa-facebook size"></i></a></li>
-        <li><a href=""><i class="fa fa-instagram size"></i></a></li>
-      </ul>
-    </div>
-  </nav> -->
-  </div>
+    </nav>
+  </div> -->
 
 		<div class="container-fluid">
-      <nav id="navbar" class="navbar navbar-default navbar-fixed-top text-center">
+      <nav id="navbar" class="navbar navbar-inverse coloured navbar-fixed-top text-center">
         <div class="container-fluid">
-          <div class="col-md-1">
-            <span class="glyphicon glyphicon-menu-hamburger" id="#slider_trigger"></span>
-          </div>
-          <div class="col-md-2">
-            <h2>Our MDB</h2>
-          </div>
-          <div class="col-md-2">
-             <h2><a href="#MyVision">Movies</a></h2>
-          </div>
-          <div class="col-md-2">
-             <h2><a href="#MyStory">Series</a></h2>
-          </div>
-          <div class="col-md-2">
-             <h2><a href="#Experience&Skills">Other</a></h2>
-          </div>
-          <div class="col-md-2">
-             <h2><a href="#Projects">Our Movie Projects</a></h2>
+          <div class="row">
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-menu-hamburger" id="#slider_trigger"></span>
+            </div>
+            <div class="col-md-2">
+              <h2>Our MDB</h2>
+            </div>
+            <div class="col-md-2">
+               <h3><a href="#MyVision">Movies</a></h3>
+            </div>
+            <div class="col-md-2">
+               <h3><a href="#MyStory">Series</a></h3>
+            </div>
+            <div class="col-md-2">
+               <h3><a href="#Experience&Skills">Other</a></h3>
+            </div>
+            <div class="col-md-2">
+               <h3><a href="#Projects">Our Movie Projects</a></h3>
+            </div>
+            <div class="col-md-2">
+              <a href="#"><span class="glyphicon glyphicon-user"></span><h4>Sign Up</h4></a>
+              <a href="#"><span class="glyphicon glyphicon-log-in"></span><h4>Login</h4></a>
+            </div>
           </div>
         </div>
       </nav><br>	
-		</div>
+		</div> 
 		<div class="container-fluid">
       <div id="movieCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
