--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
   	</div>
         <div class="stripe1">
           <div id="scifiphoto-container" class="container-fluid containers text-center">
-            <h5 class="catfont1">Sci-Fi</h5>
+            <h5 class="catfont1" id="Scifi">Sci-Fi</h5>
           </div>
         </div>
         <div class="stripe2">
           <div id="warphoto-container" class="container-fluid containers text-center">
-            <h5 class="catfont2">War</h5>
+            <h5 class="catfont2" id="War">War</h5>
           </div>
         </div>
         <div class="stripe1">
           <div id="romancephoto-container" class="container-fluid containers text-center">
-          <h5 class="catfont1">Romance</h5> 
+          <h5 class="catfont1" id="Romance">Romance</h5> 
           </div>
         </div>
         
