--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           	<nav id="navbar" class="navbar navbar-inverse coloured navbar-fixed-top text-center">
 	            <div class="container-fluid">
 	              <div class="row">
-		                <div class="col-md-1">
-		                  <span class="glyphicon glyphicon-menu-hamburger" id="menu-trigger"></span>
+		                <div class="col-md-1" id="menu-trigger">
+		                  <span class="white glyphicon glyphicon-menu-hamburger"></span>
 		                </div>
 		                <div class="col-md-2">
 		                  <h2>Our MDB</h2>
@@ -34,11 +34,6 @@
 		                <div class="col-md-2">
 		                   <h3><a href="#Romance">Romance</a></h3>
 		                </div>
-		            <!-- <div class="col-md-2 content-block">
-		               <input type="text" id="search-input">
-		              <button type="button" id="search">
-		                <span class="glyphicon glyphicon-search" ></span>
-		              </button> -->
 		            </div>
 	        	</div>
         	</nav><br>
@@ -81,7 +76,9 @@
 		</a>
 	</div> <!-- Carousel -->
 
-<!-- 	<div class="text-center slide-in-menu"> 
+	<div class="row full-height">
+		<div class="text-center slide-in-menu col-md-4"> 
+			<span class="glyphicon glyphicon-remove pull-right" id="close"></span>
         	<div class="text-center">
           		<img src="Pizza.jpg" alt="Pizza" class="social">
         	</div>
@@ -92,19 +89,20 @@
           		<h5 class="white pull-left"><a href="#">Home</a></h5>
           		<h5 class="white"><a href="#">Favorites</a></h5>
           		<div class="dropdown" id="dropper">
-            	<a class="dropdown-toggle" data-toggle="dropdown">
-              	Genres 
-	              	<span class="caret"></span>
-		            <ul class="dropdown-menu transparent white">
-		            	<li><a href="#">Comedy</a></li>
-		                <li><a href="#">Action</a></li>
-		                <li><a href="#">Horror</a></li>
-		            </ul>
-              	</a>
+            		<a class="dropdown-toggle" data-toggle="dropdown">
+              		Genres 
+	              		<span class="caret"></span>
+		            	<ul class="dropdown-menu transparent white">
+		            		<li><a href="#">Comedy</a></li>
+		                	<li><a href="#">Action</a></li>
+		                	<li><a href="#">Horror</a></li>
+		            	</ul>
+              		</a>
             	</div>
             	<h5 class="white"><a href="#">About Us</a></h5>
           	</div>
-      	</div> <!--Slide-in Menu--> -->
+		</div> 
+	</div><!--Slide-in Menu--> 
 
 	<div class="stripe1">
         <div id="scifiphoto-container" class="container-fluid containers text-center">
