image size fixed

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
           </div>
     	</div>
-  <!-- Controls -->
+  		<!-- Controls -->
 		<a class="left carousel-control" href="#movieCarousel" role="button" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left"></span>
 		</a>
@@ -110,9 +110,8 @@
             	</div>
             	<h5 class="white"><a href="#">About Us</a></h5>
           	</div>
-      	</div> <!--Slide-in Menu--> -->
-
-	<div class="stripe1">
+      	</div> <!--Slide-in Menu--> 
+      	<div class="stripe1">
         <div id="scifiphoto-container" class="container-fluid containers text-center">
     		<h5 class="catfont1" id="Scifi">Sci-Fi</h5>
       	</div>
