--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 	<div class="row full-height">
 		<div class="text-center slide-in-menu col-md-4"> 
-			<span class="glyphicon glyphicon-remove pull-right" id="close"></span>
+			<!-- <span class="glyphicon glyphicon-remove pull-right" id="close"></span> -->
         	<div class="text-center">
           		<img src="Pizza.jpg" alt="Pizza" class="social">
         	</div>
